--- a/package.json
+++ b/package.json
@@ -7,7 +7,19 @@
 		".": {
 			"types": "./index.d.ts",
 			"main": "./index.js"
-		}
+		},
+    "./color": {
+      "types": "./src/format/color/index.d.ts",
+      "main": "./src/format/color/index.js"
+    },
+    "./text": {
+      "types": "./src/format/text/index.d.ts",
+      "main": "./src/format/text/index.js"
+    },
+    "./datetime": {
+      "types": "./src/format/datetime/index.d.ts",
+      "main": "./src/format/datetime/index.js"
+    }
 	},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
