--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mistmedia/format",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Formatter functions for Mist Framework",
   "main": "index.js",
 	"exports": {
@@ -41,5 +41,6 @@
     "src/format/text/"
   ],
   "author": "@raremiroir",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module"
 }
