--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
     "ts",
     "typescript"
   ],
-
   "scripts": {
     "build": "tsup index.ts --format cjs,esm --dts",
     "lint": "tsc"
   },
   "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -38,7 +37,7 @@
   "typesVersions": {
     "*": {
       "*": [
-        "dist/*"
+        "./dist/*"
       ]
     }
   },
